--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,3 +1,16 @@
 Change sides:
-AAF defending convoy, FIA attacking.
-AAF has to blow up & evac (Mohawks)
+FIA (CTRG) defending convoy, CSAT attacking.
+CTRG has to blow up, CSAT helps to EVAC (Orca + black Mohawks).
+
+FIA: 1-2 squads, technicals at convoy
+FIA: 3 squads (2*5 Men Fireteam) + technicals.
+CSAT: 1 squad in 2 x Orca
+
+
+Idea:
+FIA is understrength (1 Squad?); NATO support is 1 squad in 2 x Ghosthawk (incl. Gunner) + maybe Pawnee--> ~32 player
+CSAT is 2 motorized squads + MRAPs --> ~ 36 player
+
+--> CSAT needs to move in and seize. NATO is tasked to land and defend. ONLY if 80% FIA die, they are allowed to blow the caches. {side _x == resistance && alive _x} count playableUnits < 2
+
+--> caches destroyed is a "draw"/"phyrric victory"
