--- a/ws_sss/todo.txt
+++ b/ws_sss/todo.txt
@@ -1,2 +1,2 @@
 TODO:
-- Max groups for triggers doesnt yet work correctly - low priority
+- Max groups for triggers & poi probably don't work correctly - low priority
